<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparentBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolBar"
        layout="@layout/custom_toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/pad_8"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_poster" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleLanguageHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_8"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:text="@string/movieLanguage"
                android:textColor="@color/transparentBlack"
                android:textSize="@dimen/text_size_regular" />

                <ImageView
                    android:id="@+id/favouriteIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="@dimen/pad_16"
                    android:contentDescription="@string/favouriteIcon" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tvTitleLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_2"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tvTitleHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_8"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:text="@string/movieTitle"
                android:textColor="@color/transparentBlack"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_2"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tvRatingHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_8"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:text="@string/movieRatings"
                android:textColor="@color/transparentBlack"
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_2"
                android:layout_marginStart="@dimen/pad_8"
                android:layout_marginEnd="@dimen/pad_8"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/pad_4"
                android:textSize="@dimen/text_size_medium"
                card_view:drawableStartCompat="@drawable/star" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>